crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__intonation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
assertion_line: 98
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "SPK"
          },
          {
            "name": null,
            "role": "Adult",
            "speaker_code": "LSN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "CA intonation contour markers and CA terminators",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: rising_to_high, rising_to_mid, level_pitch,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "falling_to_mid, falling_to_low, ca_no_break, ca_technical_break,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "ca_no_break_linker, ca_technical_break_linker, unmarked_ending",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "rising",
              "content": [
                {
                  "content": "rising",
                  "type": "text"
                }
              ],
              "raw_text": "rising",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "high",
              "content": [
                {
                  "content": "high",
                  "type": "text"
                }
              ],
              "raw_text": "high",
              "type": "word"
            },
            {
              "kind": "rising_to_high",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "rising",
              "content": [
                {
                  "content": "rising",
                  "type": "text"
                }
              ],
              "raw_text": "rising",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "mid",
              "content": [
                {
                  "content": "mid",
                  "type": "text"
                }
              ],
              "raw_text": "mid",
              "type": "word"
            },
            {
              "kind": "rising_to_mid",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "level",
              "content": [
                {
                  "content": "level",
                  "type": "text"
                }
              ],
              "raw_text": "level",
              "type": "word"
            },
            {
              "cleaned_text": "pitch",
              "content": [
                {
                  "content": "pitch",
                  "type": "text"
                }
              ],
              "raw_text": "pitch",
              "type": "word"
            },
            {
              "kind": "level",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "falling",
              "content": [
                {
                  "content": "falling",
                  "type": "text"
                }
              ],
              "raw_text": "falling",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "mid",
              "content": [
                {
                  "content": "mid",
                  "type": "text"
                }
              ],
              "raw_text": "mid",
              "type": "word"
            },
            {
              "kind": "falling_to_mid",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "falling",
              "content": [
                {
                  "content": "falling",
                  "type": "text"
                }
              ],
              "raw_text": "falling",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "low",
              "content": [
                {
                  "content": "low",
                  "type": "text"
                }
              ],
              "raw_text": "low",
              "type": "word"
            },
            {
              "kind": "falling_to_low",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "cleaned_text": "break",
              "content": [
                {
                  "content": "break",
                  "type": "text"
                }
              ],
              "raw_text": "break",
              "type": "word"
            },
            {
              "cleaned_text": "continuation",
              "content": [
                {
                  "content": "continuation",
                  "type": "text"
                }
              ],
              "raw_text": "continuation",
              "type": "word"
            },
            {
              "kind": "falling_to_low",
              "type": "separator"
            },
            {
              "kind": "ca_no_break",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "continuing",
              "content": [
                {
                  "content": "continuing",
                  "type": "text"
                }
              ],
              "raw_text": "continuing",
              "type": "word"
            },
            {
              "cleaned_text": "here",
              "content": [
                {
                  "content": "here",
                  "type": "text"
                }
              ],
              "raw_text": "here",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "no_break_tcu_continuation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "technical",
              "content": [
                {
                  "content": "technical",
                  "type": "text"
                }
              ],
              "raw_text": "technical",
              "type": "word"
            },
            {
              "cleaned_text": "break",
              "content": [
                {
                  "content": "break",
                  "type": "text"
                }
              ],
              "raw_text": "break",
              "type": "word"
            },
            {
              "cleaned_text": "continuation",
              "content": [
                {
                  "content": "continuation",
                  "type": "text"
                }
              ],
              "raw_text": "continuation",
              "type": "word"
            },
            {
              "kind": "rising_to_high",
              "type": "separator"
            },
            {
              "kind": "ca_technical_break",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "continuing",
              "content": [
                {
                  "content": "continuing",
                  "type": "text"
                }
              ],
              "raw_text": "continuing",
              "type": "word"
            },
            {
              "cleaned_text": "here",
              "content": [
                {
                  "content": "here",
                  "type": "text"
                }
              ],
              "raw_text": "here",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "tcu_continuation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "unmarked",
              "content": [
                {
                  "content": "unmarked",
                  "type": "text"
                }
              ],
              "raw_text": "unmarked",
              "type": "word"
            },
            {
              "cleaned_text": "ending",
              "content": [
                {
                  "content": "ending",
                  "type": "text"
                }
              ],
              "raw_text": "ending",
              "type": "word"
            },
            {
              "kind": "unmarked_ending",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "LSN": {
      "birth_date": null,
      "code": "LSN",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN"
      },
      "name": null,
      "role": "Adult"
    },
    "SPK": {
      "birth_date": null,
      "code": "SPK",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
