crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__jpn-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "jpn"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "jpn"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Father",
            "speaker_code": "FAT"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;05.22",
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Japanese family interaction during toy play",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: Japanese language, hiragana and katakana scripts",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "パパ",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "パパ",
              "content": [
                {
                  "content": "パパ",
                  "type": "text"
                }
              ],
              "raw_text": "パパ",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "はい",
                  "pos": "intj"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "はい",
              "content": [
                {
                  "content": "はい",
                  "type": "text"
                }
              ],
              "raw_text": "はい",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Int",
                    "S1"
                  ],
                  "lemma": "此れ",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Int",
                    "S1"
                  ],
                  "lemma": "何",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "question"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "これ",
              "content": [
                {
                  "content": "これ",
                  "type": "text"
                }
              ],
              "raw_text": "これ",
              "type": "word"
            },
            {
              "cleaned_text": "何",
              "content": [
                {
                  "content": "何",
                  "type": "text"
                }
              ],
              "raw_text": "何",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "又",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "バナナ",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "呉れる",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "の",
                  "pos": "part"
                }
              }
            ],
            "terminator": {
              "type": "question"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "ADVMOD"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "MARK"
              },
              {
                "head": 3,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "また",
              "content": [
                {
                  "content": "また",
                  "type": "text"
                }
              ],
              "raw_text": "また",
              "type": "word"
            },
            {
              "cleaned_text": "バナナ",
              "content": [
                {
                  "content": "バナナ",
                  "type": "text"
                }
              ],
              "raw_text": "バナナ",
              "type": "word"
            },
            {
              "cleaned_text": "くれる",
              "content": [
                {
                  "content": "くれる",
                  "type": "text"
                }
              ],
              "raw_text": "くれる",
              "type": "word"
            },
            {
              "cleaned_text": "の",
              "content": [
                {
                  "content": "の",
                  "type": "text"
                }
              ],
              "raw_text": "の",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "有り難う",
                  "pos": "intj"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "ありがとう",
              "content": [
                {
                  "content": "ありがとう",
                  "type": "text"
                }
              ],
              "raw_text": "ありがとう",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;05.22",
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Father",
        "speaker": "FAT"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "Miyata",
        "language": [
          "jpn"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
